--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
     <script src="jspsych-6.3.0/jspsych.js"></script>
     <link href="jspsych-6.3.0/css/jspsych.css" rel="stylesheet" type="text/css">
     <!-- <script src="jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script> -->
+    <!-- <script src="jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
