--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SIE | Scientific Study Platform</title>
+    <!-- jsPsych library core script and styling -->
+    <script src="jspsych-6.3.0/jspsych.js"></script>
+    <link href="jspsych-6.3.0/css/jspsych.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
