--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SIE | Scientific Study Platform</title>
+    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/jspsych.js"></script>
+    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
+    <link href="%PUBLIC_URL%/external_libraries/css/jspsych.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
