--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SIE | Scientific Study Platform</title>
+    <!-- jsPsych library core script and styling -->
     <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/jspsych.js"></script>
     <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
     <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
