--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#212121" />
-    <meta
-      name="description"
-      content="A modern web application to easily create, update and host scientific studies."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- Open Graph Metatags -->
-    <meta property=”og:title” content="SIE | A platform for Scientific Studies" />
-    <meta property=”og:url” content="https://cs6510-spr2021.web.app" />
-    <meta property=”og:type” content="website" />
-    <meta property=”og:description”
-      content="A modern web application to easily create, update and host scientific studies."
-    />
-    <meta property=”og:image” content="%PUBLIC_URL%/sie-image.png" />
-    <!-- Twitter Meta tags -->
-    <meta name=”twitter:card” content="website" />
-    <meta name=”twitter:title content="SIE | Scientific Study Platform" />
-    <meta name=”twitter:description”
-      content="A modern web application to easily create, update and host scientific studies."
-    />
-    <meta name=”twitter:url” content="https://cs6510-spr2021.web.app" />
-    <meta name=”twitter:image” content="%PUBLIC_URL%/twitter-image.png" />
 
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#212121" />
+  <meta name="description" content="A modern web application to easily create, update and host scientific studies." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- Open Graph Metatags -->
+  <meta property=”og:title” content="SIE | A platform for Scientific Studies" />
+  <meta property=”og:url” content="https://cs6510-spr2021.web.app" />
+  <meta property=”og:type” content="website" />
+  <meta property=”og:description”
+    content="A modern web application to easily create, update and host scientific studies." />
+  <meta property=”og:image” content="%PUBLIC_URL%/sie-image.png" />
+  <!-- Twitter Meta tags -->
+  <meta name=”twitter:card” content="website" />
+  <meta name=”twitter:title content="SIE | Scientific Study Platform" />
+  <meta name=”twitter:description”
+    content="A modern web application to easily create, update and host scientific studies." />
+  <meta name=”twitter:url” content="https://cs6510-spr2021.web.app" />
+  <meta name=”twitter:image” content="%PUBLIC_URL%/twitter-image.png" />
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -41,17 +37,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SIE | Scientific Study Platform</title>
-    <!-- jsPsych library core script and styling -->
-    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/jspsych.js"></script>
-    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
-    <link href="%PUBLIC_URL%/external_libraries/css/jspsych.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>SIE | Scientific Study Platform</title>
+  <!-- jsPsych library core script and styling -->
+  <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/jspsych.js"></script>
+  <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-html-keyboard-response.js"></script>
+  <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-image-keyboard-response.js"></script>
+  <script src="%PUBLIC_URL%/external_libraries/jspsych-6.3.0/plugins/jspsych-preload.js"></script>
+  <link href="%PUBLIC_URL%/external_libraries/css/jspsych.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -62,17 +60,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- Commented firebase js tags for now due to html js confliction bug -->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <!-- <script src="/__/firebase/8.2.6/firebase-app.js"></script> -->
+  <!-- Commented firebase js tags for now due to html js confliction bug -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <!-- <script src="/__/firebase/8.2.6/firebase-app.js"></script> -->
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
+  <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <!-- <script src="/__/firebase/8.2.6/firebase-analytics.js"></script> -->
+  <!-- <script src="/__/firebase/8.2.6/firebase-analytics.js"></script> -->
 
-    <!-- Initialize Firebase -->
-    <!-- <script src="/__/firebase/init.js"></script> -->
+  <!-- Initialize Firebase -->
+  <!-- <script src="/__/firebase/init.js"></script> -->
 
 
-  </body>
+</body>
+
 </html>
